--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ social-network-links:
 # Select which social network share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
+#  facebook: true
   linkedin: true
   vk: false
 
@@ -118,7 +118,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "implementation science,behavioral science,statistics,R tutorial"
 
 ######################################
 # --- Colours / background image --- #
