--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
-  google-scholar: https://scholar.google.com/citations?user=4VBeKlwAAAAJ&hl=en&oi=ao
+  google-scholar: scholar.google.com/citations?user=4VBeKlwAAAAJ&hl=en&oi=ao
 #  discord: "invite_code" or "users/userid" or "invite/invite_code" 
 #  kaggle: yourname
 #  hackerrank: yourname
